# display-firmware

./: .dir-locals.el  .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  sdkconfig.defaults
.cargo/: config.toml
bsp-waveshare-p4/: Cargo.toml
bsp-waveshare-p4/src/: display.rs  lib.rs  pins.rs
docs/superpowers/plans/: 2026-03-17-p4-migration.md
firmware/: Cargo.toml  build.rs  sdkconfig.defaults
firmware/.cargo/: config.toml
firmware/scripts/: flash.sh
firmware/src/: main.rs  slint_backend.rs
firmware/src/include/: ek79007_bindings.h
firmware/ui/: main.slint
src/: main.rs
