[package]
name = "display-firmware"
version = "0.1.0"
edition = "2021"
resolver = "2"
rust-version = "1.82"

[[bin]]
name = "display-firmware"
harness = false

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"

[dependencies]
log = "0.4"
esp-idf-svc = "0.52.1"

[build-dependencies]
embuild = "0.33"
